
Directory lib/libdral
 Makefile.in               Locally Modified          303 

Directory lib/libdral/include
 Makefile.in               Locally Modified          303 

Directory lib
 Makefile.am               Locally Modified          303 

Directory lib/libnullptlib
 Makefile.in               Locally Modified          303 

Directory lib/libnullptlib/include
 Makefile.in               Locally Modified          303 

Directory .
 Makefile.am               Locally Modified          303 

Directory base
 param.cpp                 Locally Removed           303 
 asim_doxy_model.dox       Locally Removed           303 
 config.cpp                Locally Removed           303 
 param.h                   Locally Removed           303 
 config.h                  Locally Removed           303 
 README                    Locally Removed           303 

Directory .
 base/                     Locally Removed           303 

Directory etc
 asim.pack                 Locally Removed           303 
 asimrc.template           Locally Removed           303 
 repositories.d/           Locally Removed           303 

Directory etc/repositories.d
 h264.pack                 Locally Removed           303 
 ofdm.pack                 Locally Removed           303 
 platform-acp.pack         Locally Removed           303 
 fast.pack                 Locally Removed           303 
 README                    Locally Removed           303 
 hasim.pack                Locally Removed           303 

Directory etc
 awb.config.template.in    Locally Removed           303 

Directory .
 etc/                      Locally Removed           303 
 aclocal.m4                Locally Modified          303 

Removed all tools made redundant by the 'awb' package and updated
the autoconf and make files.

Workspaces that have not been upgraded since the split of awb
will be broken by this checkin and you will need to manually
add <INSTALLDIR>/share/asim/awb/HEAD to the SEARCHPATH in the
awb.config file.