@@ -296,3 +296,4 @@ CSN-asimcore-301
 CSN-asimcore-302
 CSN-asimcore-303
 CSN-asimcore-304
+CSN-asimcore-305
